@@ -2,7 +2,7 @@ Source: ubuntu-core-launcher
 Section: utils
 Priority: optional
 Maintainer: Ubuntu Developers <ubuntu-devel-discuss@lists.ubuntu.com>
-Build-Depends: debhelper (>= 9), libseccomp-dev, libapparmor-dev, libudev-dev, dh-apparmor, indent
+Build-Depends: debhelper (>= 9), libseccomp-dev, libapparmor-dev, libudev-dev, dh-apparmor, indent, shellcheck
 Standards-Version: 3.9.6
 Vcs-Git: https://github.com/ubuntu-core/snap-run
 
